Remove samples from code coverage

--- a/src/cs/samples/graphics/Katabasis.Samples.Graphics.01-Clear/Katabasis.Samples.Graphics.01-Clear.csproj
+++ b/src/cs/samples/graphics/Katabasis.Samples.Graphics.01-Clear/Katabasis.Samples.Graphics.01-Clear.csproj
@@ -15,6 +15,7 @@
 
     <!-- Custom project settings -->
     <PropertyGroup>
+        <EnableCodeCoverage>false</EnableCodeCoverage>
         <EnableAnalyzers>true</EnableAnalyzers>
         <IncludeAnalyzersStyleCop>true</IncludeAnalyzersStyleCop>
     </PropertyGroup>
