--- a/src/cs/samples/input/Katabasis.Samples.Input.01-Mouse/Katabasis.Samples.Input.01-Mouse.csproj
+++ b/src/cs/samples/input/Katabasis.Samples.Input.01-Mouse/Katabasis.Samples.Input.01-Mouse.csproj
@@ -15,13 +15,14 @@
 
     <!-- Custom project settings -->
     <PropertyGroup>
+        <EnableCodeCoverage>false</EnableCodeCoverage>
         <EnableAnalyzers>true</EnableAnalyzers>
         <IncludeAnalyzersStyleCop>true</IncludeAnalyzersStyleCop>
     </PropertyGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\..\..\production\Katabasis.Framework\Katabasis.Framework.csproj" />
-    </ItemGroup>
 
     <!-- Project references -->
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\production\Katabasis.Framework\Katabasis.Framework.csproj" />
+    </ItemGroup>
 
 </Project>
