Add `imgui-cs` as Git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ext/c2cs"]
 	path = ext/c2cs
 	url = https://github.com/lithiumtoast/c2cs
+[submodule "ext/imgui-cs"]
+	path = ext/imgui-cs
+	url = https://github.com/lithiumtoast/imgui-cs
