--- a/nuget.config
+++ b/nuget.config
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
-  <packageRestore>
-    <!-- Allow NuGet to download missing packages -->
-    <add key="enabled" value="True" />
-    <!-- Automatically check for missing packages during build -->
-    <add key="automatic" value="True" />
-  </packageRestore>
-  
+  <packageSources>
+    <!--To inherit the global NuGet package sources remove the <clear/> line below -->
+    <clear />
+    <add key="dotnet-experimental" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-experimental/nuget/v3/index.json" />
+    <add key="lithiumtoast" value="https://www.myget.org/F/lithiumtoast/api/v3/index.json" />
+    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
+  </packageSources>
 </configuration>
