--- a/src/cs/production/Katabasis.Framework/Katabasis.Framework.csproj
+++ b/src/cs/production/Katabasis.Framework/Katabasis.Framework.csproj
@@ -14,9 +14,9 @@
 		<EnableCodeCoverage>false</EnableCodeCoverage>
 	</PropertyGroup>
 
-	<!-- Project references -->
+	<!-- NuGet references -->
 	<ItemGroup>
-		<ProjectReference Include="$(GitRepositoryPath)/ext/c2cs/src/cs/production/C2CS.Runtime/C2CS.Runtime.csproj" />
+		<PackageReference Include="C2CS.Runtime" Version="*-*" />
 	</ItemGroup>
 
 	<!-- Stock effects files emedded into assembly -->
