--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -22,7 +22,7 @@ jobs:
     - name: "Checkout Git repository"
       uses: actions/checkout@v2
       with:
-        ref: ${{ GITHUB_REF }}
+        ref: ${{ env.GITHUB_REF }}
 
     - name: "Fetch all history for all tags and branches"
       run: git fetch --prune --unshallow
@@ -75,7 +75,7 @@ jobs:
       uses: actions/checkout@master
       with:
         submodules: 'recursive'
-        ref: ${{ GITHUB_REF }}
+        ref: ${{ env.GITHUB_REF }}
 
     - name: "Setup .NET Core CLI"
       uses: actions/setup-dotnet@v1
