--- a/src/cs/tests/Directory.Build.props
+++ b/src/cs/tests/Directory.Build.props
@@ -3,9 +3,7 @@
     <Import Project="../Common.props" />
 
     <PropertyGroup>
-        <IsPackable>true</IsPackable>
-        <IncludeSymbols>true</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
 </Project>
