--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -85,6 +85,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - name: "Clone Git repository"
+      uses: actions/checkout@master
+      with:
+        ref: ${{ env.GITHUB_REF }}
+        submodules: 'true'
+
     - name: "Setup .NET CLI"
       uses: actions/setup-dotnet@v1
       with:
