--- a/src/cs/platforms/Katabasis.Platform.linux-x64/Katabasis.Platform.linux-x64.csproj
+++ b/src/cs/platforms/Katabasis.Platform.linux-x64/Katabasis.Platform.linux-x64.csproj
@@ -1,5 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+    <!-- MSBuild settings -->
+    <PropertyGroup>
+        <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace />
+    </PropertyGroup>
+
     <!-- Dynamic link libraries -->
     <ItemGroup>
         <Content Include="$(GitRepositoryPath)lib/*.so">
