Update platform `.csproj`s for packing with no dependencies

--- a/src/cs/platforms/Katabasis.Platform.osx-x64/Katabasis.Platform.osx-x64.csproj
+++ b/src/cs/platforms/Katabasis.Platform.osx-x64/Katabasis.Platform.osx-x64.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+    <!-- MSBuild Settings -->
+    <PropertyGroup>
+        <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
+    </PropertyGroup>
+
     <!-- Dynamic link libraries -->
     <ItemGroup>
         <Content Include="$(GitRepositoryPath)lib/*.dylib">
