Update to .NET 6: fix warnings/errors

--- a/src/cs/platforms/Katabasis.Platform.linux-x64/Katabasis.Platform.linux-x64.csproj
+++ b/src/cs/platforms/Katabasis.Platform.linux-x64/Katabasis.Platform.linux-x64.csproj
@@ -2,6 +2,7 @@
 
     <!-- MSBuild Settings -->
     <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
         <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
     </PropertyGroup>
 
