macOS arm64 part2

--- a/src/cs/production/Katabasis.Framework/Katabasis.Framework.csproj
+++ b/src/cs/production/Katabasis.Framework/Katabasis.Framework.csproj
@@ -16,7 +16,7 @@
 	
 	<!-- Project referneces -->
 	<ItemGroup>
-		<ProjectReference Include="$(GitRepositoryPath)/src/cs/platforms/Katabasis.Platform/Katabasis.Platform.csproj" />
+		<ProjectReference Include="..\Katabasis.Native\Katabasis.Native.csproj" />
 	</ItemGroup>
 
 	<!-- NuGet references -->
