--- a/src/cs/production/Katabasis.Native.osx-arm64/Katabasis.Native.osx-arm64.csproj
+++ b/src/cs/production/Katabasis.Native.osx-arm64/Katabasis.Native.osx-arm64.csproj
@@ -3,14 +3,19 @@
     <!-- MSBuild Settings -->
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <RootNamespace>Katabasis.Platform</RootNamespace>
+        <RuntimeIdentifier>osx-arm64</RuntimeIdentifier>
         <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
+        <IncludeBuildOutput>false</IncludeBuildOutput>
+        <IncludeSymbols>false</IncludeSymbols>
+        <CopyBuildOutputToOutputDirectory>false</CopyBuildOutputToOutputDirectory>
     </PropertyGroup>
 
     <!-- Dynamic link libraries -->
     <ItemGroup>
-        <Content Include="$(GitRepositoryPath)lib/*.dylib">
+        <Content Include="$(GitRepositoryPath)lib/osx-arm64/*.dylib">
             <Link>%(Filename)%(Extension)</Link>
-            <PackagePath>runtimes/$(RuntimeIdentifier)/native/%(Filename)%(Extension)</PackagePath>
+            <PackagePath>runtimes/osx-arm64/native/%(Filename)%(Extension)</PackagePath>
             <Pack>true</Pack>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
