--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -3,7 +3,7 @@ name: "Develop"
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  DOTNET_CORE_SDK_VERSION: 5.0.400
+  DOTNET_CORE_SDK_VERSION: 6.0.100-rc.1.21463.6
 
 on:
   push:
@@ -99,19 +99,25 @@ jobs:
       uses: actions/download-artifact@v1
       with:
         name: "native-libraries-win-x64"
-        path: './lib'
+        path: './lib/win-x64'
 
     - name: "Download native libraries (linux-x64)"
       uses: actions/download-artifact@v1
       with:
         name: "native-libraries-linux-x64"
-        path: './lib'
+        path: './lib/linux-x64'
 
     - name: "Download native libraries (osx-x64)"
       uses: actions/download-artifact@v1
       with:
         name: "native-libraries-osx-x64"
-        path: './lib'
+        path: './lib/osx-x64'
+
+    - name: "Download native libraries (osx-arm64)"
+      uses: actions/download-artifact@v1
+      with:
+        name: "native-libraries-osx-arm64"
+        path: './lib/osx-arm64'
 
     - name: "Download version artifact"
       uses: actions/download-artifact@v2
