--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,8 +7,12 @@ env:
 
 on:
   push:
-    branches: [develop]
-    tags: [v*]
+    branches:
+      - develop
+    tags: 
+      - v*
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
 
