--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -3,7 +3,7 @@ name: "Pull requests"
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  DOTNET_CORE_SDK_VERSION: 5.0.100
+  DOTNET_CORE_SDK_VERSION: 6.0.100-rc.1.21463.6
 
 on:
   pull_request_target:
