--- a/src/cs/production/Katabasis.Native.win-x64/Katabasis.Native.win-x64.csproj
+++ b/src/cs/production/Katabasis.Native.win-x64/Katabasis.Native.win-x64.csproj
@@ -13,9 +13,9 @@
 
     <!-- Dynamic link libraries -->
     <ItemGroup>
-        <Content Include="$(GitRepositoryPath)lib/win-x64/*.dll">
+        <Content Include="$(GitRepositoryPath)\lib\win-x64\*.dll">
             <Link>%(Filename)%(Extension)</Link>
-            <PackagePath>runtimes/win-x64/native/%(Filename)%(Extension)</PackagePath>
+            <PackagePath>runtimes\win-x64\native\%(Filename)%(Extension)</PackagePath>
             <Pack>true</Pack>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
