--- a/src/cs/production/Katabasis.Native/Katabasis.Native.csproj
+++ b/src/cs/production/Katabasis.Native/Katabasis.Native.csproj
@@ -14,9 +14,6 @@
   </PropertyGroup>
 
   <!-- NuGet package references -->
-  <ItemGroup>
-    <PackageReference Include="C2CS.Runtime" Version="*-*" />
-  </ItemGroup>
 
   <!-- Meta projects that pull in native assemblies based on runtime -->
   <ItemGroup Condition="'$(RuntimeIdentifier)' == 'win-x64'">
@@ -34,24 +31,12 @@
 
   <!-- C# bindings for native assemblies -->
   <ItemGroup>
-    <Compile Include="$(GitRepositoryPath)ext/sdl-cs/src/cs/production/SDL-cs/SDL.cs">
-      <Link>SDL/SDL.cs</Link>
-    </Compile>
-    <Compile Include="$(GitRepositoryPath)ext/FAudio-cs/src/cs/production/FAudio-cs/FAudio.cs">
-      <Link>FAudio/FAudio.cs</Link>
-    </Compile>
-    <Compile Include="$(GitRepositoryPath)ext/FAudio-cs/src/cs/production/FAudio-cs/FAudio.Extensions.cs">
-      <Link>FAudio/FAudio.Extensions.cs</Link>
-    </Compile>
-    <Compile Include="$(GitRepositoryPath)ext/FNA3D-cs/src/cs/production/FNA3D-cs/FNA3D.cs">
-      <Link>FNA3D/FNA3D.cs</Link>
-    </Compile>
-    <Compile Include="$(GitRepositoryPath)ext/FNA3D-cs/src/cs/production/FNA3D-cs/FNA3D_Image.cs">
-      <Link>FNA3D/FNA3D_Image.cs</Link>
-    </Compile>
-    <Compile Include="$(GitRepositoryPath)ext/imgui-cs/src/cs/production/imgui-cs/imgui.cs">
-      <Link>ImGui/imgui.cs</Link>
-    </Compile>
+	<Compile Include="$(GitRepositoryPath)\ext\sdl-cs\src\cs\production\SDL\SDL.cs" Link="SDL/SDL.cs" />
+	<Compile Include="$(GitRepositoryPath)\ext\FAudio-cs\src\cs\production\FAudio\FAudio.cs" Link="FAudio/FAudio.cs" />
+    <Compile Include="$(GitRepositoryPath)\ext\FAudio-cs\src\cs\production\FAudio\FAudio.Extensions.cs" Link="FAudio/FAudio.Extensions.cs" />
+    <Compile Include="$(GitRepositoryPath)\ext\FNA3D-cs\src\cs\production\FNA3D\FNA3D.cs" Link="FNA3D/FNA3D.cs" />
+    <Compile Include="$(GitRepositoryPath)\ext\FNA3D-cs\src\cs\production\FNA3D\FNA3D_Image.cs" Link="FNA3D/FNA3D_Image.cs" />
+    <Compile Include="$(GitRepositoryPath)\ext\imgui-cs\src\cs\production\imgui\imgui.cs" Link="ImGui/imgui.cs" />
   </ItemGroup>
 
   <ItemGroup>
